crates/ars-components/src/navigation/pagination/snapshots/ars_components__navigation__pagination__tests__pagination_ellipsis.snap
---
source: crates/ars-components/src/navigation/pagination.rs
expression: snapshot_attrs(&api.ellipsis_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "ellipsis",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pagination",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "separator",
            ),
        ),
    ],
    styles: [],
}
