crates/ars-components/src/navigation/pagination/snapshots/ars_components__navigation__pagination__tests__pagination_next_enabled.snap
---
source: crates/ars-components/src/navigation/pagination.rs
expression: snapshot_attrs(&api.next_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "next-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pagination",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Go to next page",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
