crates/ars-components/src/navigation/pagination/snapshots/ars_components__navigation__pagination__tests__pagination_prev_disabled.snap
---
source: crates/ars-components/src/navigation/pagination.rs
expression: snapshot_attrs(&api.prev_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "prev-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pagination",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Go to previous page",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
