crates/ars-components/src/navigation/pagination/snapshots/ars_components__navigation__pagination__tests__pagination_root.snap
---
source: crates/ars-components/src/navigation/pagination.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "pagination",
            ),
        ),
        (
            Data(
                "ars-size",
            ),
            String(
                "medium",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Pagination",
            ),
        ),
        (
            Role,
            String(
                "navigation",
            ),
        ),
    ],
    styles: [],
}
